gateway/authswap-sasl-scram-sasl-plain/gateway.yaml
apiVersion: platform.confluent.io/v1beta1
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/name: confluent-for-kubernetes
    app.kubernetes.io/managed-by: kustomize
  name: confluent-gateway
spec:
  replicas: 3
  image:
    application: confluentinc/cpc-gateway:1.0.0-1-ubi9
    init: confluentinc/confluent-init-container:3.1.0
  secretStores:
    - name: vault-store
      provider:
        type: Vault
        configSecretRef: vault-config
  streamingDomains:
    - name: sasl-plain-kafka
      type: kafka
      kafkaCluster:
        bootstrapServers:
          - id: SASL_PLAIN
            endpoint: broker:9093
        nodeIdRanges:
          - name: pool-1
            start: 1
            end: 3
  routes:
    - name: scram-plain-swap-route
      endpoint: gateway.example.com:9595
      brokerIdentificationStrategy:
        type: port
      streamingDomain:
        name: sasl-plain-kafka
        bootstrapServerId: SASL_PLAIN
      security:
        auth: swap
        secretStore: vault-store
        client:
          authentication:
            type: scram
            scram:
              alterScramCredentials: true
              admin:
                secretRef: scram-admin-credentials
        cluster:
          authentication:
            type: plain
            jaasConfigPassThrough:
              secretRef: plain-jaas
  externalAccess:
    type: loadBalancer
    loadBalancer:
      domain: gateway.example.com
